Fixed Removing extra space due to browser search menu

--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,7 @@
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
+  min-height: calc(var(--vh, 1vh) * 100);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -52,10 +53,10 @@ button {
 }
 
 .fall-appear {
-  transform: translate(0,-71px);
+  transform: translate(0, -71px);
 }
 .fall-appear.fall-appear-active {
-  transform: translate(0,0);
+  transform: translate(0, 0);
   transition: transform 500ms linear;
 }
 
