--- a/src/components/AppName/style.css
+++ b/src/components/AppName/style.css
@@ -10,6 +10,6 @@
 
 @media only screen and (max-width: 600px) {
   .app-name {
-    padding-right: 5rem;
+    padding-right: 0px 5rem;
   }
 }
