--- a/src/components/GodDescription/style.css
+++ b/src/components/GodDescription/style.css
@@ -6,6 +6,7 @@
   -webkit-box-orient: vertical;
   overflow: hidden;
   max-height: calc(100vh - 20rem);
+  max-height: calc(calc(var(--vh, 1vh) * 100) - 20rem);
 }
 
 .god-description::-webkit-scrollbar {
